[tool.poetry]
name = "jaxtpu"
version = "0.1.3"
readme = "README.md"
homepage = "https://github.com/shawwn/jaxtpu"
description = "A helper package to install the latest JAX on TPUs, along with all necessary dependencies (e.g. libtpu-nightly)"
authors = ["Shawn Presser"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jax = {version = "^0.2.18", extras = ["tpu"]}
jaxlib = "0.1.69"
libtpu-nightly = {url = "https://storage.googleapis.com/cloud-tpu-tpuvm-artifacts/wheels/libtpu-nightly/libtpu_nightly-0.1.dev20210709-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Shawn's Website" = "https://www.shawwn.com"
"Support me on Patreon" = "https://www.patreon.com/shawwn"
"@theshawwn on Twitter" = "https://www.twitter.com/theshawwn"
"sillysaurusx on Hacker News" = "https://news.ycombinator.com/threads?id=sillysaurusx"
